<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackingDisplay" >
    
    <TextView
        android:id="@+id/trackingHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="trackingHeader"
        android:textSize="@dimen/contextFont" />
    
    

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/trackingButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startTrackingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="startTracking"
            android:text="@string/timer_start" />

        <Button
            android:id="@+id/trackingFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="finishTracking"
            android:text="@string/timer_finish" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/trackingMeterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/trackingButtonLayout"
        android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/distance"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.33"
	        android:layout_marginLeft="10dp"
	        android:text="@string/distance"
	        android:textSize="@dimen/contextFont" />
	
	    <Chronometer
	        android:id="@+id/timer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.33"
	        android:layout_marginLeft="55dp"
	        android:text="Chronometer"
	        android:textSize="@dimen/contextFont" />
	
	    <TextView
	        android:id="@+id/speed"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.33"
	        android:layout_marginLeft="60dp"
	        android:text="@string/current_speed"
	        android:textSize="@dimen/contextFont" />
	</LinearLayout>
	
    <fragment 
  		android:id="@+id/map"
  		android:layout_width="match_parent"
  		android:layout_height="match_parent"
  		android:layout_below="@id/trackingHeader"
  		android:layout_above="@id/trackingMeterLayout"
  		class="com.google.android.gms.maps.SupportMapFragment"/>

</RelativeLayout>